<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textColor="@color/pickerview_divider"
        android:padding="10dp"
        android:text="@string/period"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingRight="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/since"/>

            <TextView
                android:id="@+id/lblSince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:drawableRight="@drawable/ic_arrow_down"
                android:drawablePadding="5dp"
                android:text="@string/mm_yyyy"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:paddingLeft="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/to"/>

            <TextView
                android:id="@+id/lblTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_down"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:text="@string/mm_yyyy"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/show"/>


    <View
        android:id="@+id/cpView"
        android:visibility="gone"
        android:background="#e0000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
